# kilter_brain_gen

./: .gitignore  Justfile  README.md  TRAINING.md  get_csv.sh  get_csv.sql  pyproject.toml  requirements.in  requirements.txt  shuffler.py
.claude/: settings.json
mlm/: mlm_gen.py
src/: utils.py
src/api/: api.py
src/climb_clm/: cfg.py  data.py  generate.py  generator.py  model.py  penalizer.py  penalty_stats_callback.py  train.py  train_tokenizer.py  trainer.py  util.py
src/climb_gpt/: data.py  generate.py  train.py  train_tokenizer.py
src/climb_mlm/: train.py
src/clm/: clm.py  clm_data.py  clm_gen.py  clm_tok.py  clm_trainer.py
src/data/: get_csv.py
src/mlm/: mlm.py  mlm_gen.py
src/name/: generate.py  generate_watch.py  name.py  name_gen.py  name_gen_watch.py  train.py
